; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_disabled_panel_msg.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_disabled_panel_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdscr = common dso_local global i32 0, align 4
@ERR_PANEL_DISABLED = common dso_local global i32 0, align 4
@color_error = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @disabled_panel_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @disabled_panel_msg(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i8* @module_to_label(i32 %6)
  store i8* %7, i8** %3, align 8
  %8 = load i32, i32* @stdscr, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @getmaxyx(i32 %8, i32 %9, i32 %10)
  %12 = load i32, i32* @stdscr, align 4
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* @ERR_PANEL_DISABLED, align 4
  %15 = load i32, i32* %4, align 4
  %16 = sub nsw i32 %15, 1
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @color_error, align 4
  %19 = call i32 @draw_header(i32 %12, i8* %13, i32 %14, i32 %16, i32 0, i32 %17, i32 %18)
  ret void
}

declare dso_local i8* @module_to_label(i32) #1

declare dso_local i32 @getmaxyx(i32, i32, i32) #1

declare dso_local i32 @draw_header(i32, i8*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
